Changes since version 3.0.1
---------------------------

- Deprecated ice_newIdentity, ice_newFacet, ice_newContext,
  ice_newAdapterId and ice_newEndpoints methods proxy. You should now
  use the ice_identity, ice_facet, ice_context, ice_adapterId and
  ice_endpoints proxy methods. The former methods will be removed from
  the next major release.

- Changed the Ice core and services to use the random generator from
  IceUtil. The initialization of the communicator doesn't call srand
  or srand48 anymore. It's up to your application to call it if
  necessary.

- Added random generator to IceUtil (in include/IceUtil/Random.h). The
  random generator is using /dev/urandom on Unix platforms and the
  cryptography API on Windows (CryptGenRandom).

- Added requestId to Current.

- Added typedefs for ProxyType and PointerType to the generated class 
  for slice classes and interfaces to allow for easier templating.

- Fixed a bug in the Glacier2 router which could cause the router 
  to leak resources when a session is destroyed and hang on shutdown.

- Fixed a buffered mode bug in the Glacier2 router which could cause
  hangs in the router if a client misbehaved.

- AMI invocations will now reuse the connection cached with the
  proxy instead of always looking up an existing connection for
  each invocation. As a side effect of this change, AMI invocations 
  on a proxy with collocation optimization enabled will now raise
  Ice::CollocationOptimizationException.

- Added Ice.Default.LocatorCacheTimeout property and
  ice_locatorCacheTimeout() proxy method. If a cached endpoint is
  older than the configured cache timeout, the Ice runtime won't use
  the cached endpoint. Instead, the Ice runtime will query again the
  Ice locator service to retrieve up-to-date endpoints and will update
  the locator cache. Please see the Ice manual for more information.

- Added the proxy method ice_endpointSelection which allows an