@@ -97,12 +97,12 @@ IceInternal::ProxyFactory::checkRetryAfterException(const LocalException& ex, co
     //
     if(dynamic_cast<const ObjectNotExistException*>(&ex))
     {
-	IndirectReferencePtr ir = IndirectReferencePtr::dynamicCast(ref);
-	if(!ir || !ir->getLocatorInfo())
+	LocatorInfoPtr li = ref->getLocatorInfo();
+	if(!li)
 	{
 	    ex.ice_throw();
 	}
-	ir->getLocatorInfo()->clearObjectCache(ir);
+	li->clearObjectCache(IndirectReferencePtr::dynamicCast(ref));
     }
     else if(dynamic_cast<const RequestFailedException*>(&ex))
     {
